BUG: 288293

Don't delete objects from cache that are not touched during removeAccountList
(cherry picked from commit b2ceddca0d5c2252fb24edb4ddb6fab782d309f1)